@@ -1,5 +1,9 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+2/21/14: Added three more colors for arrows drawn with Grab with Note.
+
+2/21/14: Fixed changing transparency during model view movies.
+
 2/15/14: IMOD_4-6-41
 2/14/14: In eTomo, fixed a problem with slowness when opening 3dmod dialogs.
 (Bug# 1778)
